crates/core/tests/compile_fail/fact_new_reexport_unavailable.stderr
error[E0599]: no associated function or constant named `construct` found for struct `converge_core::ContextFact` in the current scope
 --> tests/compile_fail/fact_new_reexport_unavailable.rs:7:30
  |
7 |     let _fact = ContextFact::construct(ContextKey::Seeds, "test-id", "test-content");
  |                              ^^^^^^^^^ associated function or constant not found in `converge_core::ContextFact`
  |
note: if you're trying to build a new `converge_core::ContextFact` consider using one of the following associated functions:
      converge_core::ContextFact::new_projection
      converge_core::ContextFact::from_wire
 --> $WORKSPACE/crates/pack/src/fact.rs
  |
  | /     pub fn new_projection<T>(
  | |         key: ContextKey,
  | |         id: impl Into<FactId>,
  | |         payload: T,
... |
  | |     where
  | |         T: FactPayload + PartialEq,
  | |___________________________________^
...
  | /     pub fn from_wire(
  | |         wire: WireContextFact,
  | |         registry: &PayloadRegistry,
  | |     ) -> Result<Self, PayloadError> {
  | |___________________________________^
